--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   
   <script src="./js/uikit.min.js"></script>
   <script src="./js/uikit-icons.min.js"></script>
-  <!-- <script src="./js/main.js"></script> -->
+  <script src="./js/main.js"></script>
 
 </body>
 </html>
